# dockerlens

./: README.md  package.json  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/docker/: client.rs  containers.rs  events.rs  images.rs  logs.rs  mod.rs  stats.rs
src/components/: container-actions.tsx  container-drawer.tsx  container-row.tsx  drawer-actions.tsx  drawer-details.tsx  drawer-header.tsx
src/components/containers/: container-actions.tsx  container-row.tsx  container-table.tsx  index.ts
src/components/drawer/: container-drawer.tsx  drawer-actions.tsx  drawer-details.tsx  drawer-header.tsx  drawer-logs.tsx  drawer-stats.tsx  index.ts
src/components/images/: image-actions.tsx  image-row.tsx  image-table.tsx  index.ts
src/components/layout/: app-sidebar.tsx  dashboard.tsx  docker-error.tsx  header.tsx  images-dashboard.tsx
src/components/ui/: sheet.tsx
src/hooks/: index.ts  use-container-action.ts  use-container-list.ts  use-container-stats.ts  use-docker-status.ts  use-image-list.ts  use-selected-container.ts
src/lib/: invokes.ts  types.ts  utils.ts
src/providers/: container-provider.tsx  contexts.ts  docker-status-context.ts  docker-status-provider.tsx  image-contexts.ts  image-provider.tsx  index.ts
src/services/: docker.ts  index.ts
src/store/: container-context.tsx
src/types/: container.ts  index.ts
