[package]
name = "dockerlens"
version = "0.1.0"
description = "A lightweight Docker container management desktop app"
authors = ["dockerlens"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dockerlens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
bollard = "0.20.1"
futures-util = "0.3.32"
tokio = { version = "1.50.0", features = ["macros", "rt", "time"] }

